# firebase-auth-cli

./: .gitignore  Cargo.toml  README.md  RELEASES.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
src/: config.rs  errors.rs  firebase.rs  main.rs  output.rs  prompt.rs
src/commands/: claims.rs  config_cmd.rs  emulator.rs  info.rs  links.rs  mod.rs  users.rs
