[package]
name = "fbadmin"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Firebase Auth administration CLI"
license = "AGPL-3.0-only"
repository = "https://github.com/NeoScript/firebase-admin-cli"
homepage = "https://github.com/NeoScript/firebase-admin-cli"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
confy = "2"
console = "0.16"
const_format = "0.2"
csv = "1"
dialoguer = "0.12"
error-stack = "0.6"
google-cloud-auth = "1"
indicatif = "0.18"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rs-firebase-admin-sdk = { version = "4", default-features = false, features = ["rustls-tls", "tokens"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
vergen-gitcl = { version = "9", features = ["build"] }

[profile.release]
strip = true
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
